@@ -1,0 +1,11 @@
+<html>
+<head>
+
+</head>
+<body>
+<!-- not a problem -->
+<script type="text/javascript" src="http://localhost/test.html"></script>
+<!-- problem here -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+</body>
+</html>
