@@ -14,3 +14,4 @@ Test-For:
  privacy-breach-statistics-website
  privacy-breach-twitter
  privacy-breach-w3c-valid-html
+ privacy-breach-may-use-debian-package
